deployment.yaml
# Sample deployment script
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: backend-name-here
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  replicas: 3
  selector:
    matchLabels:
      app: backend-name-here
  template:
    metadata:
      labels:
        app: backend-name-here
    spec:
      containers:
      - image: gcr.io/project-id-here/container:v11
        name: backend-name-here
        command:
            - gunicorn
            - --workers=4
            - --bind=0.0.0.0:8000
            - django_a.wsgi
        ports:
        - containerPort: 8000
          protocol: TCP
