ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # https://kubernetes.github.io/ingress-nginx/examples/rewrite/
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-staging"
spec:
  tls:
    - secretName: issuer-tls
      hosts:
        - rimorin.xyz
  rules:
    - host: rimorin.xyz
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - pathType: ImplementationSpecific
            path: /api/?(.*)
            backend:
              service:
                name: api-service
                port:
                  number: 8080
